<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".AboutActivity">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- App Info -->
            <ImageView
                android:src="@drawable/ic_launcher_foreground"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="Version: 3.0.0"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View style="@style/Divider"/>

            <!-- Privacy Policy -->
        <androidx.cardview.widget.CardView
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/box_back"
            android:elevation="8dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#000000"
                android:text="@string/anal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#777777"
                android:text="@string/anal_details"/>
            <TextView
                android:id="@+id/privacy_policy"
                android:text="Privacy Policy"
                android:textColor="@color/link_color"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Open Source Licenses -->
        </LinearLayout>
        </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/open_source"
                android:text="Open Source Licenses"
                android:textColor="@color/link_color"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:onClick="ossClick"
                android:layout_height="wrap_content"/>

            <!-- Terms of Use -->
        <androidx.cardview.widget.CardView
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/box_back"
            android:layout_marginTop="10dp"
            android:elevation="8dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:text="@string/ads"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#777777"
                android:text="@string/ads_details"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/box_back"
            android:elevation="8dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:text="@string/sciencedata"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#777777"
                android:onClick="Details"
                android:text="@string/sciDataSource"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
            <!-- Developer Info -->
            <androidx.cardview.widget.CardView
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/box_back"
                android:layout_marginTop="10dp"
                android:elevation="8dp">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            <TextView
                android:text="Developed by KharbLabs"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/contact_us"
                android:text="Contact / Feedback"
                android:textColor="@color/link_color"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

               </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>