<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.oxidation.Oxidation">
    <TextView
        android:id="@+id/header_title3"
        android:layout_margin="5sp"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OXIDATION NUMBER CALCULATOR"
        android:textAlignment="center"
        android:textStyle="italic|bold"

        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        app:cardElevation="5sp"
        app:cardCornerRadius="12dp"
        android:id="@+id/oxy_find_input"
        app:layout_constraintTop_toBottomOf="@+id/header_title3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:id="@+id/oxyInputContainer"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chemical_compound"
                />
            <AutoCompleteTextView
                android:id="@+id/molecular_formula_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="16sp"
                android:background="@drawable/light_button_background"
                android:elevation="1dp"
                android:gravity="top|left"
                android:inputType="textMultiLine|textCapSentences|textVisiblePassword"
                android:lines="5"

                android:maxLines="10"
                android:minLines="1"
                android:scrollbars="none"
                android:hint="K2Cr2O7"
                android:textSize="20sp"

                android:textColor="#222222"
                android:visibility="visible"
                tools:ignore="RtlHardcoded" />
            <Button android:id="@+id/calculate_molecular_oxy_button"
                android:layout_width="fill_parent"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                android:text="Calculate"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        app:cardElevation="5sp"
        app:cardCornerRadius="12dp"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@+id/oxy_find_input"
        android:id="@+id/oxidationResultCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/oxidation_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caution_unknown_element_states_may_be_wrong"
                android:padding="5dp"
                android:textSize="10dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:textColor="#ff0000"
                android:layout_margin="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/element_wise_oxidation_states"
                android:padding="5dp"
                android:layout_margin="5dp"
                />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oxidationSpan"
            android:textSize="20sp"
            android:padding="10sp"
            android:elevation="5dp"
            android:text="SA2"
            android:visibility="gone"
            android:layout_margin="10dp"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:layout_gravity="center"/>
            <LinearLayout
                android:id="@+id/oxidationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ion wise oxidation states: "
                android:padding="5dp"
                android:layout_margin="5dp"
                />
            <TableLayout
                android:id="@+id/oxidation_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_margin="10dp"
                android:background="@drawable/cell_border"
                android:stretchColumns="1"
                android:layout_gravity="center"
                android:padding="16dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        app:cardElevation="5sp"
        app:layout_constraintTop_toBottomOf="@+id/oxidationResultCard"
        android:id="@+id/masResContainer">
        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/oxyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/oxyresul_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:padding="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30dp" />


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oxidList"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>